--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,23 +1,28 @@
-div:first-child{
+#div{
     border: 1px solid black;
     width: 100%;
+    height: 500px;
 }
 
-div>div:first-child{
+#div>div:first-child{
     width: 25%;
+    height: 25%;
     background-color: rgb(7, 7, 173);
 }
 
-div>div:nth-child(2){
+#div>div:nth-child(2){
     width: 50%;
+    height: 25%;
     background-color: rgb(7, 7, 107);
 }
 
-div>div:nth-child(3){
+#div>div:nth-child(3){
     width: 75%;
+    height: 25%;
     background-color: rgb(8, 8, 76);
 }
-div>div:nth-child(4){
+#div>div:nth-child(4){
     width: 100%;
+    height: 25%;
     background-color: rgb(3, 3, 21);
 }
