--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,7 +1,8 @@
 #div{
-    border: 1px solid black;
+    border: 3px solid black;
     width: 100%;
     height: 500px;
+    background-color: blue;
 }
 
 #div>div:first-child{
